hide under construction website

--- a/hwauck.html
+++ b/hwauck.html
@@ -11,16 +11,16 @@
   <body>
     <main>
         <h1>Helen Wauck</h1>  
-        <h2>UX Researcher</h2> 
-        <div class="grid-container">
+        <h2>UX Researcher</h2>
+        <h3>Page Under Construction</h3> 
+        <!-- <div class="grid-container">
           <div class="me">PROFILE PIC</div>
           <div class="grid-item">UX Researcher with 3 years of experience in industry and 6 in academia getting my PhD in Human-Computer Interaction. As the lead UX researcher in every industry and academic project I've worked on, I develop and execute UX research plans across the entire user-centered, iterative design cycle for a variety of products with very different target users. Some of these include cancer doctors and patients, students studying STEM in grade school through college, AI plan recognition engineering scientists, and automated drone operators, among others.   
 
             
 
-<!-- 
              remote and in-person usability testing, in-depth interviews, surveys, quantitative metrics development, statistical analysis, qualitative thematic analyses, and the sort of user empathy required to advocate for diversity, equity, and inclusion. -->
-             </div>
+             <!-- </div>
  
         </div> 
         <div>Selected Projects</div>
@@ -37,6 +37,8 @@
             <div>The high fidelity prototype consisted of a React app with a database of fake patient data on the backend. I ran the next usability test with this prototype and gave participants the same 8 tasks. As before, we only managed to recruit 2 participants, and one of them was someone who had already participated in the previous usability test. This was unfortunate given that prior participation would make me and the interface familiar to the participant and therefore introducing bias that would likely make them less likely to give honest constructive feedback. The main insight I got from this usability test was that the system's exercise analysis output was still confusing in a different way: the combination of colors and symbology prevented participants from interpreting the output correctly. </div>
             <div>Our modifications to the interface after this test consisted of revising the color and symbology used based on participant feedback about their priorities (e.g. it's better to do a smaller amount of the exercise correctly than do more but incorrectly), and adding indicators that the user could hover over a calendar day to see its tooltip.</div>
             <div>The last usability test revealed that participants were now able to correctly interpret the system's activity analysis for each day in the calendars, but one of them, a doctor, commented that the interface layout does not align with their typical workflow. They also mentioned that this level of detail would be more appropriate for PTs, who could then provide a summary to the doctor. These two pieces of feedback were the most fundamental I'd gotten thus far despite 2 previous usability tests. The reasons I didn't get this kind of feedback in earlier usability tests were probably that 1) there weren't enough participants in each usability test, 2) I reused some participants across different tests, and 3) the fact that I didn't run my first test using a wireframe. In hindsight, given that we only had enough time to run 3 usability tests, I should have run the first with a wireframe, the second with the paper prototype, and only the final one with the high fidelity prototype. The lack of participants is a more difficult problem to address given our limited connections in the medical field, but perhaps we will have more opportunities in the future to establish these connections with the diversity of projects my company pursues.</div>
+
+            <div>Can put pictures of REFLECT from the rejected HFES paper</div>  -->
           
     </main>
 	<script src="index.js"></script>
